fixing spacing on blog by cat page

--- a/css/style_ie7.css
+++ b/css/style_ie7.css
@@ -107,3 +107,12 @@ margin-bottom: 7px;
     margin-top: 0;
 }
 
+.blog_whitebox_primary_title_only h3 {
+    font-weight: normal;
+}
+
+
+.blog_whitebox_primary_title_only .whitebox_primary_post_attr {
+    margin: -8px 0;
+}
+
